multi-cloud-ai-workflow/deployment/ec2/aws-vpc.tf
/* Setup our aws provider */
provider "aws" {
  access_key = "${var.aws_access_key}"
  secret_key = "${var.aws_secret_key}"
  region     = "${var.aws_region}"
}

/* Define our vpc */
resource "aws_vpc" "default" {
  cidr_block           = "${var.aws_vpc_cidr}"
  enable_dns_hostnames = true

  tags {
    Name = "${var.global_prefix}-vpc"
  }
}
